--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.6",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^3.0.7",
+    "resend": "^4.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
